chore: adds translation and first bit of styling

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -762,6 +762,11 @@
         "saveError": "Manuel korrigering af målepunkt mislykkedes"
       }
     },
+    "actorConversation":  {
+      "cases": "Sager",
+      "newCaseButton": "Ny sag",
+      "newCaseTitle": "Ny sag"
+    },
     "relatedMeteringPointsTitle": "Relaterede målepunkter",
     "relatedMeteringPointsLoading": "Henter relaterede målepunkter",
     "relatedMeteringPointsEmpty": "Der er ingen relaterede målepunkter",
