chore: adds form and type control

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -765,7 +765,11 @@
     "actorConversation": {
       "cases": "Sager",
       "newCaseButton": "Ny sag",
-      "newCaseTitle": "Ny sag"
+      "newCaseTitle": "Ny sag",
+      "typeLabel": "Type",
+      "types": {
+        "misc": "Andet"
+      }
     },
     "relatedMeteringPointsTitle": "Relaterede målepunkter",
     "relatedMeteringPointsLoading": "Henter relaterede målepunkter",
