--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -765,7 +765,11 @@
     "actorConversation": {
       "cases": "Cases",
       "newCaseButton": "New case",
-      "newCaseTitle": "New case"
+      "newCaseTitle": "New case",
+      "typeLabel": "Type",
+      "types": {
+        "misc": "Miscellaneous"
+      }
     },
     "relatedMeteringPointsTitle": "Related metering points",
     "relatedMeteringPointsLoading": "Loading related metering points",
