--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -605,6 +605,9 @@
       "masterData": {
         "tabLabel": "Stamdata"
       },
+      "actor-conversation": {
+        "tabLabel": "Aktør dialog"
+      },
       "processes": {
         "tabLabel": "Processer"
       },
