--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -605,6 +605,9 @@
       "masterData": {
         "tabLabel": "Master data"
       },
+      "actor-conversation": {
+        "tabLabel": "Actor conversation"
+      },
       "processes": {
         "tabLabel": "Processes"
       },
