--- a/libs/watt/package/core/styles/spacing/+storybook/storybook-spacing-overview.mdx
+++ b/libs/watt/package/core/styles/spacing/+storybook/storybook-spacing-overview.mdx
@@ -27,6 +27,7 @@ import { Meta } from '@storybook/addon-docs/blocks';
 --watt-space-xs
 --watt-space-s
 --watt-space-m
+--watt-space-ml
 --watt-space-l
 --watt-space-xl
 ```
@@ -40,6 +41,7 @@ import { Meta } from '@storybook/addon-docs/blocks';
 @include watt.space-inset-xs;
 @include watt.space-inset-s;
 @include watt.space-inset-m;
+@include watt.space-inset-ml;
 @include watt.space-inset-l;
 @include watt.space-inset-xl;
 
@@ -58,6 +60,7 @@ import { Meta } from '@storybook/addon-docs/blocks';
 @include watt.space-stack-xs;
 @include watt.space-stack-s;
 @include watt.space-stack-m;
+@include watt.space-stack-ml;
 @include watt.space-stack-l;
 @include watt.space-stack-xl;
 
@@ -66,6 +69,7 @@ import { Meta } from '@storybook/addon-docs/blocks';
 @include watt.space-inline-xs;
 @include watt.space-inline-s;
 @include watt.space-inline-m;
+@include watt.space-inline-ml;
 @include watt.space-inline-l;
 @include watt.space-inline-xl;
 ```
@@ -79,6 +83,7 @@ Available classes
 <div class="watt-space-inset-xs">...</div>
 <div class="watt-space-inset-s">...</div>
 <div class="watt-space-inset-m">...</div>
+<div class="watt-space-inset-ml">...</div>
 <div class="watt-space-inset-l">...</div>
 <div class="watt-space-inset-xl">...</div>
 
@@ -97,6 +102,7 @@ Available classes
 <div class="watt-space-stack-xs">...</div>
 <div class="watt-space-stack-s">...</div>
 <div class="watt-space-stack-m">...</div>
+<div class="watt-space-stack-ml">...</div>
 <div class="watt-space-stack-l">...</div>
 <div class="watt-space-stack-xl">...</div>
 
@@ -105,6 +111,7 @@ Available classes
 <div class="watt-space-inline-xs">...</div>
 <div class="watt-space-inline-s">...</div>
 <div class="watt-space-inline-m">...</div>
+<div class="watt-space-inline-ml">...</div>
 <div class="watt-space-inline-l">...</div>
 <div class="watt-space-inline-xl">...</div>
 ```
