(Actor Conversation 2) Adds new case button and component (#5126)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Dzhavat Ushev <dzu@energinet.dk>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -762,6 +762,11 @@
         "saveError": "Manual correction of metering point failed"
       }
     },
+    "actorConversation": {
+      "cases": "Cases",
+      "newCaseButton": "New case",
+      "newCaseTitle": "New case"
+    },
     "relatedMeteringPointsTitle": "Related metering points",
     "relatedMeteringPointsLoading": "Loading related metering points",
     "relatedMeteringPointsEmpty": "There are no related metering points",
