Actor Conversation: Adds Form and a type dropdown (#5131)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Dzhavat Ushev <dzu@energinet.dk>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -766,7 +766,11 @@
     "actorConversation": {
       "cases": "Cases",
       "newCaseButton": "New case",
-      "newCaseTitle": "New case"
+      "newCaseTitle": "New case",
+      "typeLabel": "Type",
+      "types": {
+        "misc": "Miscellaneous"
+      }
     },
     "relatedMeteringPointsTitle": "Related metering points",
     "relatedMeteringPointsLoading": "Loading related metering points",
