chore: adds more renaming

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -607,7 +607,7 @@
         "tabLabel": "Master data"
       },
       "marketParticipantConversation": {
-        "tabLabel": "Actor conversation"
+        "tabLabel": "Market participant conversation"
       },
       "processes": {
         "tabLabel": "Processes"
