feat: adds new receiver

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -770,6 +770,10 @@
       "typeLabel": "Type",
       "types": {
         "misc": "Andet"
+      },
+      "receiverLabel": "Modtager",
+      "receivers": {
+        "energinet": "Energinet"
       }
     },
     "relatedMeteringPointsTitle": "Relaterede målepunkter",
