--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -770,6 +770,10 @@
       "typeLabel": "Type",
       "types": {
         "misc": "Miscellaneous"
+      },
+      "receiverLabel": "Receiver",
+      "receivers": {
+        "energinet": "Energinet"
       }
     },
     "relatedMeteringPointsTitle": "Related metering points",
