feat: adds internal note field

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -774,7 +774,8 @@
       "receiverLabel": "Receiver",
       "receivers": {
         "energinet": "Energinet"
-      }
+      },
+      "internalNoteLabel": "Internal note"
     },
     "relatedMeteringPointsTitle": "Related metering points",
     "relatedMeteringPointsLoading": "Loading related metering points",
