--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -774,7 +774,8 @@
       "receiverLabel": "Modtager",
       "receivers": {
         "energinet": "Energinet"
-      }
+      },
+      "internalNoteLabel": "Intern note"
     },
     "relatedMeteringPointsTitle": "Relaterede målepunkter",
     "relatedMeteringPointsLoading": "Henter relaterede målepunkter",
