feat(dh, metering-point): add translations for state of steps in process-overview and add fallback values in the tables

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -938,6 +938,14 @@
           "dueDate": "Forfaldsdato",
           "actor": "Aktør",
           "state": "Status"
+        },
+        "stepStates": {
+          "pending": "Afventende",
+          "running": "Kører",
+          "failed": "Fejlet",
+          "skipped": "Sprunget over",
+          "canceled": "Annulleret",
+          "succeeded": "Modtaget"
         }
       }
     },
