--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -938,6 +938,14 @@
           "dueDate": "Due date",
           "actor": "Actor",
           "state": "State"
+        },
+        "stepStates": {
+          "pending": "Pending",
+          "running": "Running",
+          "failed": "Failed",
+          "skipped": "Skipped",
+          "canceled": "Canceled",
+          "succeeded": "Received"
         }
       }
     },
