feat(dh, metering-points): adjust translations of reason codes in process-overview

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -895,9 +895,9 @@
         "ConnectMeteringPoint": "Connection of new metering point (BRS-008)"
       },
       "reasonCode": {
-        "EndOfSupply": "E20",
-        "NewMeteringPoint": "E02",
-        "ConnectMeteringPoint": "D15"
+        "EndOfSupply": "End of supply (E20)",
+        "NewMeteringPoint": "New metering point (E02)",
+        "ConnectMeteringPoint": "Connect meteringpoint (D15)"
       },
       "filters": {
         "created": "Time",
