--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -895,9 +895,9 @@
         "ConnectMeteringPoint": "Tilslutning af nyoprettet målepunkt (BRS-008)"
       },
       "reasonCode": {
-        "EndOfSupply": "E20",
-        "NewMeteringPoint": "E02",
-        "ConnectMeteringPoint": "D15"
+        "EndOfSupply": "Leveranceophør (E20)",
+        "NewMeteringPoint": "Nyt målepunkt (E02)",
+        "ConnectMeteringPoint": "Tilslutning af målepunkt (D15)"
       },
       "filters": {
         "created": "Tidspunkt",
