--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -770,7 +770,12 @@
       "typeLabel": "Type",
       "types": {
         "misc": "Andet"
-      }
+      },
+      "receiverLabel": "Modtager",
+      "receivers": {
+        "energinet": "Energinet"
+      },
+      "internalNoteLabel": "Intern note"
     },
     "relatedMeteringPointsTitle": "Relaterede målepunkter",
     "relatedMeteringPointsLoading": "Henter relaterede målepunkter",
