--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -770,7 +770,12 @@
       "typeLabel": "Type",
       "types": {
         "misc": "Miscellaneous"
-      }
+      },
+      "receiverLabel": "Receiver",
+      "receivers": {
+        "energinet": "Energinet"
+      },
+      "internalNoteLabel": "Internal note"
     },
     "relatedMeteringPointsTitle": "Related metering points",
     "relatedMeteringPointsLoading": "Loading related metering points",
