feat: adds message textarea

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -775,7 +775,9 @@
       "receivers": {
         "energinet": "Energinet"
       },
-      "internalNoteLabel": "Internal note"
+      "internalNoteLabel": "Internal note",
+      "messageLabel": "Message",
+      "sendButton": "Send"
     },
     "relatedMeteringPointsTitle": "Related metering points",
     "relatedMeteringPointsLoading": "Loading related metering points",
