Goodbye MISSING_PRICE_SERIES :'(

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -409,8 +409,7 @@
           "AWAITING": "Afventer",
           "CLOSED": "Lukket",
           "CANCELLED": "Annulleret",
-          "CURRENT": "Aktuel",
-          "MISSING_PRICE_SERIES": "Mangler prisserie"
+          "CURRENT": "Aktuel"
         },
         "moreOptions": {
           "vatInclusiveGroupName": "Moms",
