--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -409,8 +409,7 @@
           "AWAITING": "Pending",
           "CLOSED": "Closed",
           "CANCELLED": "Cancelled",
-          "CURRENT": "Current",
-          "MISSING_PRICE_SERIES": "Missing price series"
+          "CURRENT": "Current"
         },
         "moreOptions": {
           "vatInclusiveGroupName": "VAT",
