--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -904,7 +904,10 @@
       "reasonCode": {
         "EndOfSupply": "Leveranceophør (E20)",
         "NewMeteringPoint": "Nyt målepunkt (E02)",
-        "ConnectMeteringPoint": "Tilslutning af målepunkt (D15)"
+        "ConnectMeteringPoint": "Tilslutning af målepunkt (D15)",
+        "UpdateMasterDataConsumer": "Opdatering af kundestamdata (E34)",
+        "CustomerMoveIn": "Tilflytning (E01)",
+        "MoveIn": "Tilflytning (E01)"
       },
       "filters": {
         "created": "Tidspunkt",
@@ -928,6 +931,22 @@
         "BRS_008_CONNECTMETERINGPOINT_V1_STEP_1": "Anmodning om tilslutning af målepunkt (RSM-021)",
         "BRS_008_CONNECTMETERINGPOINT_V1_STEP_2": "Godkendelse af tilslutning af målepunkt (RSM-021)",
         "BRS_008_CONNECTMETERINGPOINT_V1_STEP_3": "Afvisning af tilslutning af målepunkt (RSM-021)",
+        "BRS_009_MOVEIN_V1_STEP_1": "Anmodning om tilflytning (RSM-001)",
+        "BRS_009_MOVEIN_V1_STEP_2": "Godkendelse af anmodning om tilflytning (RSM-001)",
+        "BRS_009_MOVEIN_V1_STEP_3": "Afvisning af anmodning om tilflytning (RSM-001)",
+        "BRS_009_MOVEIN_V1_STEP_4": "Information om målepunktsstamdata (RSM-022)",
+        "BRS_009_MOVEIN_V1_STEP_5": "Information om kundestamdata (RSM-028)",
+        "BRS_009_MOVEIN_V1_STEP_6": "Information om pristilknytninger (RSM-031)",
+        "BRS_009_MOVEIN_V1_STEP_7": "Anmodning om opdatering af kundestamdata (RSM-027)",
+        "BRS_009_MOVEIN_V1_STEP_8": "Godkendelse af opdatering af kundestamdata (RSM-027)",
+        "BRS_009_MOVEIN_V1_STEP_9": "Afvisning af opdatering af kundestamdata (RSM-027)",
+        "BRS_009_MOVEIN_V1_STEP_10": "Information om tilflytning til netvirksomhed (RSM-004/E65)",
+        "BRS_009_MOVEIN_V1_STEP_11": "Information om kundestamdata til netvirksomhed (RSM-028/E65)",
+        "BRS_009_MOVEIN_V1_STEP_12": "Information om stop af leverance (RSM-004/E01)",
+        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_1": "Anmodning om opdatering af kundestamdata (RSM-027)",
+        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_2": "Godkendelse af opdatering af kundestamdata (RSM-027)",
+        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_3": "Afvisning af opdatering af kundestamdata (RSM-027)",
+        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_4": "Information om kundestamdata (RSM-028)",
         "UNKNOWN": "Ukendt trin"
       },
       "details": {
