--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -904,7 +904,10 @@
       "reasonCode": {
         "EndOfSupply": "End of supply (E20)",
         "NewMeteringPoint": "New metering point (E02)",
-        "ConnectMeteringPoint": "Connect metering point (D15)"
+        "ConnectMeteringPoint": "Connect metering point (D15)",
+        "UpdateMasterDataConsumer": "Update master data consumer (E34)",
+        "CustomerMoveIn": "Customer move-in (E65)",
+        "MoveIn": "Customer move-in (E65)"
       },
       "filters": {
         "created": "Time",
@@ -928,6 +931,22 @@
         "BRS_008_CONNECTMETERINGPOINT_V1_STEP_1": "Request for connection of metering point (RSM-021)",
         "BRS_008_CONNECTMETERINGPOINT_V1_STEP_2": "Confirmation of request for connection of metering point (RSM-021)",
         "BRS_008_CONNECTMETERINGPOINT_V1_STEP_3": "Rejection of request for connection of metering point (RSM-021)",
+        "BRS_009_MOVEIN_V1_STEP_1": "Request move-in (RSM-001)",
+        "BRS_009_MOVEIN_V1_STEP_2": "Approve move-in request (RSM-001)",
+        "BRS_009_MOVEIN_V1_STEP_3": "Reject move-in request (RSM-001)",
+        "BRS_009_MOVEIN_V1_STEP_4": "Metering point master data information (RSM-022)",
+        "BRS_009_MOVEIN_V1_STEP_5": "Customer master data information (RSM-028)",
+        "BRS_009_MOVEIN_V1_STEP_6": "Price link information (RSM-031)",
+        "BRS_009_MOVEIN_V1_STEP_7": "Request update customer master data (RSM-027)",
+        "BRS_009_MOVEIN_V1_STEP_8": "Approve update customer master data (RSM-027)",
+        "BRS_009_MOVEIN_V1_STEP_9": "Reject update customer master data (RSM-027)",
+        "BRS_009_MOVEIN_V1_STEP_10": "Move-in information to grid company (RSM-004/E65)",
+        "BRS_009_MOVEIN_V1_STEP_11": "Customer master data to grid company (RSM-028/E65)",
+        "BRS_009_MOVEIN_V1_STEP_12": "Stop of supply information (RSM-004/E01)",
+        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_1": "Request change customer characteristics (RSM-027)",
+        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_2": "Approve change customer characteristics (RSM-027)",
+        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_3": "Reject change customer characteristics (RSM-027)",
+        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_4": "Customer master data information (RSM-028)",
         "UNKNOWN": "Unknown Step"
       },
       "details": {
