--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -943,9 +943,9 @@
         "BRS_009_MOVEIN_V1_STEP_7": "Anmodning om opdatering af kundestamdata (RSM-027)",
         "BRS_009_MOVEIN_V1_STEP_8": "Godkendelse af opdatering af kundestamdata (RSM-027)",
         "BRS_009_MOVEIN_V1_STEP_9": "Afvisning af opdatering af kundestamdata (RSM-027)",
-        "BRS_009_MOVEIN_V1_STEP_10": "Information om tilflytning til netvirksomhed (RSM-004/E65)",
-        "BRS_009_MOVEIN_V1_STEP_11": "Information om kundestamdata til netvirksomhed (RSM-028/E65)",
-        "BRS_009_MOVEIN_V1_STEP_12": "Information om stop af leverance (RSM-004/E01)",
+        "BRS_009_MOVEIN_V1_STEP_10": "Generisk information (RSM-004)",
+        "BRS_009_MOVEIN_V1_STEP_11": "Information om kundestamdata (RSM-028)",
+        "BRS_009_MOVEIN_V1_STEP_12": "Generisk information (RSM-004)",
         "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_1": "Anmodning om opdatering af kundestamdata (RSM-027)",
         "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_2": "Godkendelse af opdatering af kundestamdata (RSM-027)",
         "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_3": "Afvisning af opdatering af kundestamdata (RSM-027)",
