--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -943,13 +943,13 @@
         "BRS_009_MOVEIN_V1_STEP_7": "Request update customer master data (RSM-027)",
         "BRS_009_MOVEIN_V1_STEP_8": "Approve update customer master data (RSM-027)",
         "BRS_009_MOVEIN_V1_STEP_9": "Reject update customer master data (RSM-027)",
-        "BRS_009_MOVEIN_V1_STEP_10": "Move-in information to grid company (RSM-004/E65)",
-        "BRS_009_MOVEIN_V1_STEP_11": "Customer master data to grid company (RSM-028/E65)",
-        "BRS_009_MOVEIN_V1_STEP_12": "Stop of supply information (RSM-004/E01)",
+        "BRS_009_MOVEIN_V1_STEP_10": "Generic Notification (RSM-004)",
+        "BRS_009_MOVEIN_V1_STEP_11": "Characteristics of a Customer at an AP (RSM-028)",
+        "BRS_009_MOVEIN_V1_STEP_12": "Generic Notification (RSM-004)",
         "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_1": "Request change customer characteristics (RSM-027)",
         "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_2": "Approve change customer characteristics (RSM-027)",
         "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_3": "Reject change customer characteristics (RSM-027)",
-        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_4": "Customer master data information (RSM-028)",
+        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_4": "Characteristics of a Customer at an AP (RSM-028)",
         "UNKNOWN": "Unknown Step"
       },
       "details": {
