Actor Conversation: Message (#5146)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -777,7 +777,9 @@
       "receivers": {
         "energinet": "Energinet"
       },
-      "internalNoteLabel": "Intern note"
+      "internalNoteLabel": "Intern note",
+      "messageLabel": "Besked",
+      "sendButton": "Send"
     },
     "relatedMeteringPointsTitle": "Relaterede målepunkter",
     "relatedMeteringPointsLoading": "Henter relaterede målepunkter",
