chore: changes type to subject and adds testids

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -769,8 +769,8 @@
       "cases": "Sager",
       "newCaseButton": "Ny sag",
       "newCaseTitle": "Ny sag",
-      "typeLabel": "Type",
-      "types": {
+      "subjectLabel": "Emne",
+      "subjects": {
         "misc": "Andet"
       },
       "receiverLabel": "Modtager",
