--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -705,7 +705,8 @@
         "electricalHeating": "{{ meteringPoint.overview.shared.electricalHeating }}",
         "electricalHeatingTaxStartDate": "Elvarmedato",
         "powerLimit": "Effektgrænse",
-        "powerLimitValue": "{{ value }} kW",
+        "powerLimitValueKw": "{{ value }} kW",
+        "powerLimitValueAmpere": "{{ value }} ampere",
         "disconnectionType": "Afbrydelsesart",
         "gridArea": "Netområde",
         "fromGridArea": "Fra netområde",
