fix(dh): charges feedback (#5177)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -817,9 +817,10 @@
         },
         "copyMessage": "Copy message ID",
         "navigateToMessage": "Go to message",
-        "edit": "Edit change link",
-        "stop": "Stop change link",
-        "cancel": "Cancel change link"
+        "actions": "Actions",
+        "edit": "Edit charge link",
+        "stop": "Stop charge link",
+        "cancel": "Cancel charge link"
       },
       "create": {
         "errors": {
