--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -2265,7 +2265,7 @@
     "topBarTitle": "Reports",
     "tabs": {
       "settlementReports": "Settlement reports",
-      "measurementsReports": "{{ meteringPoint.overview.shared.terminology.measurements }}",
+      "measurementsReports": "{{ shared.terminology.measurements }}",
       "imbalancePrices": "Imbalance prices"
     },
     "settlements": {
@@ -2351,7 +2351,7 @@
       }
     },
     "measurementsReports": {
-      "title": "{{ meteringPoint.overview.shared.terminology.measurements }}",
+      "title": "{{ shared.terminology.measurements }}",
       "emptyMessage": "There are no measurements reports",
       "errorTitle": "{{ shared.error.title }}",
       "errorMessage": "{{ shared.error.message }}",
